--- a/Bump/Bump/Views/ForgetPassword.xaml
+++ b/Bump/Bump/Views/ForgetPassword.xaml
@@ -3,8 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
              x:Class="Bump.Views.ForgetPassword"
+             xmlns:ViewModels="clr-namespace:Bump.ViewModels"
              NavigationPage.HasNavigationBar="False"
              XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D">
+    <ContentPage.BindingContext>
+        <ViewModels:ForgetPasswordViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Margin="10" Padding="10" Spacing="20">
             <StackLayout Margin="0" Spacing="10">
@@ -17,7 +21,7 @@
 
             <StackLayout Margin="20,20,20,20" Padding="0" Spacing="35">
                 <XFMaterial:MaterialTextField 
-                       Text="{Binding Email}" 
+                       Text="{Binding ForgetPass.Email}" 
                        UnderlineColor="#B00020" TintColor="#B00020"
                        Placeholder="Email" PlaceholderColor="Gray"                       
                        HeightRequest="40"  BackgroundColor="#EAEAEA" InputType="Email"/>
