--- a/Bump/Bump/Views/MainPageContribute/ContributeDetail.xaml
+++ b/Bump/Bump/Views/MainPageContribute/ContributeDetail.xaml
@@ -9,30 +9,17 @@
              xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
              NavigationPage.HasNavigationBar="False"
              XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D">
-    <Grid BackgroundColor="Transparent">
-        <Grid.RowDefinitions BackgroundColor="Transparent" >
-            <RowDefinition />
-            <RowDefinition Height="Auto"  />
-        </Grid.RowDefinitions>
-        <XamainMap:Map  />
-
-        <Grid     
-                 VerticalOptions="Center" 
-                 HorizontalOptions="End"
-                  
-                  BackgroundColor="Transparent"
-                  
-                  >
-            <ImageButton   Grid.Row="0" BackgroundColor="White" Padding="23,20,23,20" Margin="10,10"  CornerRadius="30"
-                        Source="speed_radar"  />
-            <ImageButton Grid.Row="1" BackgroundColor="White" Padding="23,20,23,20" Margin="10,10" CornerRadius="30"
-                        Source="bump1" />
-            <ImageButton Grid.Row="2" BackgroundColor="White" Padding="23,20,23,20" Margin="10,10" CornerRadius="30"
-                        Source="digger" />
-        </Grid>
+    
+    <Grid>
+        <XamainMap:Map x:Name="MyMap" IsShowingUser="true" Padding="0" />
+        <StackLayout Spacing="40" VerticalOptions="Center" HorizontalOptions="End"  >
+            <Button Image="speed_radar" BackgroundColor="White" CornerRadius="30" BorderColor="Black" BorderWidth="1"/>
+            <Button Image="bump1" BackgroundColor="White" CornerRadius="30" Padding="0" BorderColor="Black" BorderWidth="1"/>
+            <Button Image="digger" BackgroundColor="White" CornerRadius="30" Padding="0" BorderColor="Black" BorderWidth="1"/>
+        </StackLayout>
 
     </Grid>
-
+    
 
 </ContentPage>
 
