--- a/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bump.Views.MainPageView.MainPageFlyout"
              xmlns:ViewModels="clr-namespace:Bump.ViewModels"
+             xmlns:Utils="clr-namespace:Bump.Utils"
              Title="Flyout">
     <ContentPage.BindingContext>
         <ViewModels:MainPageFlyoutViewModel/>
@@ -14,19 +15,23 @@
             <StackLayout Orientation="Horizontal" Margin="10,0" Padding="0" Spacing="0"
                      HorizontalOptions="FillAndExpand">
                 <Button Text="English" TextTransform="None" TextColor="#FFFFFF"
-                    FontAttributes="Bold" HorizontalOptions="FillAndExpand" 
-                    CornerRadius="5" BackgroundColor="#DC384D"/>
+                        FontAttributes="Bold" HorizontalOptions="FillAndExpand" 
+                        CornerRadius="5" BackgroundColor="#DC384D"
+                        Command="{Binding ChangeLanguageCommand}" CommandParameter="en-US"/>
                 <Button Text="عربي" TextColor="#DC384D" BackgroundColor="#FFFFFF"
-                    FontAttributes="Bold"
-                    CornerRadius="5" HorizontalOptions="FillAndExpand" />
+                        FontAttributes="Bold"
+                        CornerRadius="5" HorizontalOptions="FillAndExpand"
+                        Command="{Binding ChangeLanguageCommand}" CommandParameter="ar-JO"/>
             </StackLayout>
 
             <StackLayout Margin="0" Padding="0" Spacing="10">
-                <Button ImageSource="puzzle" Text="Contribute" TextTransform="None"
-                        TextColor="White" FontAttributes="Bold"
-                        ContentLayout="Left,40" HorizontalOptions="StartAndExpand"
-                        BackgroundColor="Transparent" Padding="0"
-                        Command="{Binding OpenSignInPageCommand}"/>
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
+                    <Image Source="puzzle" Aspect="AspectFit"/>
+                    <Label Text="{Utils:Translate Contribute}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding OpenSignInPageCommand}"/>
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
                 <Button ImageSource="customer_service" Text="Contact Us" TextTransform="None"
                         TextColor="White" FontAttributes="Bold"
                         ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
